[FIX] Fixed buttons overlapping when shrinking firefox windows
bzr revid: fme@openerp.com-20111011133713-6eardsp1qv8subsg

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -725,10 +725,11 @@ label.error {
     width: 100%;
 }
 .openerp .oe-listview .oe-field-cell button {
+    margin: 0;
     padding: 0;
     border: none;
     background: none;
-    width: 100%;
+    width: 16px;
 }
 .openerp .oe-listview .oe-field-cell button:active {
     opacity: 0.5;
